update file paths

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
 
-	<img class="center-align" src="./assets/img/Krabby_Patty_transparentpng.png"/>
+	<img class="center-align" src="../img/Krabby_Patty_transparentpng.png"/>
 	<div class="jumbotron text-center"><h1>Eat the burger!</h1></div>
 
 	<div class="row">
